--- a/team.css
+++ b/team.css
@@ -51,6 +51,7 @@ a {
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
     font-style: bold;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 #globalNav > div {
@@ -149,21 +150,22 @@ ul {
 }
 
 .float1 {
-    width: 35%;
-    margin-right: 10%;
+    width: 40%;
+    margin-right: 8%;
     float: right;
-    border: 2px dashed grey;
+    border: 2px solid rgb(56,120,145);
+    border-radius: 20px;
     text-align: left;
-    padding: 20px;
     margin-bottom: 30px;
 }
 .float {
-  width: 35%;
-  margin-left: 10%;
+  width: 40%;
+  margin-left: 8%;
   float: left;
-  border: 2px dashed grey;
+  border: 2px solid rgb(56,120,145);
+  border-radius: 20px;
   text-align: left;
-  padding: 20px;
+  padding: 0px;
   margin-bottom: 30px;
 }
 
@@ -195,7 +197,8 @@ ul {
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 50px;
-    
+    opacity: 0;
+    animation: fade 1s steps(40) 8s 1 normal both;
   }
   
   .container button:hover {background-color: rgb(56,120,145);}
@@ -205,7 +208,6 @@ ul {
   }
 
   .page p {
-      text-align: center;
       font-size: 18px;
       color: white;
       font-family: 'Roboto Flex', sans-serif;
@@ -293,7 +295,6 @@ ul {
 
 .page2 {
   margin-top: 20%;
-  text-align: center;
   color: white;
   font-family: 'Roboto Flex', sans-serif; 
   padding-bottom: 40%;
@@ -311,6 +312,10 @@ ul {
   text-align: left;
   padding-left: 20%;
   padding-bottom: 20px;
+}
+
+.footer {
+  margin-top: 8%;
 }
 
 .footerText {
@@ -343,28 +348,49 @@ ul {
   border-radius: 50%;
   width: 100%;
   height: width;
+  padding-bottom: 0px;
 }
 
 .innerfloat {
   float: left;
   width: 20%;
-  padding: 20px;
-  padding-right: 10%;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
 }
 
 .innerfloat1 {
   float: left;
-  padding-top: 3%;
-  padding: 20px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
 }
 
 .innerfloat h1, .innerfloat1 h1 {
   font-size: 40px;
 }
 
-.float p, .float1 p {
+.firstP {
   margin-top: 30%;
   color: grey;
   text-align: left;
-  padding-left: 4%;
+  border: solid 2px red;
+  padding-left: 0%;
+}
+
+.float1 a, .float a {
+    color: rgb(56,120,145);
+}
+    
+
+.rightText {
+  margin-top: 30%;
+  padding-left: 0%;
+}
+
+@keyframes fade{
+  from{opacity: 0;}
+  to{opacity: 1;}
 }
