--- a/blog.css
+++ b/blog.css
@@ -2,10 +2,15 @@ html, body {
     margin: 0px;
     padding: 0px;
     color: #FFFFFF;
-    font-family: MundoSans, Helvetica, sans-serif;
+    font-family: Visby-semibold;
     font-weight: 400;
     scroll-behavior: smooth;
     background-color: #040910;
+}
+
+@font-face {
+  font-family: Visby-semibold;
+  src: url(Fontspring-DEMO-visbycf-demibold.otf)
 }
 
 a {
@@ -29,9 +34,8 @@ a {
     z-index: 10;
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
-    font-style: bold;
-    font-family: 'Roboto Flex', sans-serif;
-}
+    font-family: Visby-semibold;
+  }
 
 #globalNav > div {
     margin: auto;
@@ -166,15 +170,7 @@ ul {
   .float button:hover {background-color: rgb(56,120,145);}
 
   .page {
-        margin-top: 20%;
-        margin-bottom: 20%;
-  }
-
-  .page p {
-      text-align: center;
-      font-size: 18px;
-      color: white;
-      font-family: 'Roboto Flex', sans-serif;
+        margin-bottom: 10%;
   }
 
   .page a {
@@ -234,30 +230,10 @@ ul {
   }
   
   .page2 {
-               argin-top: 10%;
-    ext-align: center;
+    margin-top: 10%;
+    text-align: center;
   }
   
-  .page h5 {
-    text-align: left;
-    padding-top: 8px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-    padding-left: 20%;
-    font-size: 28px;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-  }
-  
-  .page2 p {
-    color: grey;
-    text-align: left;
-    padding-left: 20%;
-    padding-bottom: 0px;
-    font-family: 'Roboto Flex', sans-serif;  
-    font-size: 16px;
-  }
-
   .page2 hr {
     width: 60%;
     color: black;
@@ -274,7 +250,7 @@ ul {
   }
 
   h1 {
-    margin-top: 15%;
+    margin-top: 5%;
     font-family: 'Roboto Flex', sans-serif;
     color: white;
     text-align: center;
@@ -308,6 +284,7 @@ ul {
     font-size: 76px;
     padding-bottom: 0px;
     margin-bottom: 0px;
+    font-family: Visby-semibold;
 }
 
 .down {
@@ -354,4 +331,59 @@ ul {
 @keyframes fade{
   from{opacity: 0;}
   to{opacity: 1;}
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 2%;
+}
+
+.grid-item {
+  min-width: 300px;
+  border-radius: 5px;
+  border: 1px solid rgb(56,120,145);
+  min-height: 120px;
+  text-align: left;
+  margin: 1%;
+}
+
+.grid-item h5 {
+  text-align: left;
+  margin: 15px;
+  font-size: 12px;
+  font-family: Visby-semibold;
+  font-weight: 400;
+}
+
+.grid-item h3 {
+  text-align: center;
+  font-size: 24px;
+  background: rgb(56,120,145);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Gantari', sans-serif;
+  font-weight: 600;
+}
+
+.page2 h1 {
+  font-family: 'Gantari', sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  background: -webkit-linear-gradient(30deg, rgb(168, 31, 150),rgb(15, 93, 211));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.grid-item p {
+  text-align: left;
+  margin: auto;
+  color: white;
+  font-size: 14px;
+  margin-left: 15px;
+  font-family: 'Gantari', sans-serif;
+  font-weight: 600;
 }
