--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
+
 html, body {
     margin: 0px;
     padding: 0px;
     color: #FFFFFF;
-    font-family: MundoSans, Helvetica, sans-serif;
+    font-family: Visby-semibold;
     font-weight: 400;
     scroll-behavior: smooth;
     background-color: #040910;
@@ -30,8 +31,8 @@ a {
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
     font-style: bold;
-    font-family: 'Roboto Flex', sans-serif;
-}
+    font-family: 'Gantari', sans-serif;
+  }
 
 #globalNav > div {
     margin: auto;
@@ -46,7 +47,6 @@ a {
 }
 
 #globalNavLogo {
-  animation: fade 1s steps(40) 6.4s 1 normal both;
   float: left;
 }
 
@@ -58,8 +58,6 @@ a {
 
 #list-fade {
     opacity: 100%;
-    transition: opacity 1.5s;
-    animation: fade 1s steps(40) 6.4s 1 normal both;
 }
 
 #list-fade:hover {
@@ -109,7 +107,7 @@ ul {
 
 .float h2 {
     font-size: 96px;
-    font-family: 'Roboto Flex', sans-serif;
+    font-family: 'Gantari', sans-serif;
     padding-bottom: 0%;
     margin-bottom: 0%;
 }
@@ -123,13 +121,14 @@ ul {
     padding-top: 0%;
     margin-bottom: 12%;
     font-size: 40px;
-    font-family: 'Roboto Flex', sans-serif;
-}
+    font-family: 'Gantari', sans-serif;
+  }
 
 .float {
+  position: absolute;
     width: 50%;
     float: left;
-    padding-left: 10%;
+  left: 10%;
 }
 
 .float1 {
@@ -138,11 +137,11 @@ ul {
 }
 
 #right {
+  position: absolute;
     width: 80%;
     height: auto;
     float: right;
-    padding-right: 16%;
-    padding-top: 1%;
+    left: 85%;
 }
 
 .right {
@@ -162,63 +161,81 @@ ul {
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 50px;
-    
+    opacity: 100%;
+    font-family: 'Gantari', sans-serif;
   }
   
   .float button:hover {background-color: rgb(56,120,145);}
 
   .page {
-        margin-top: 50%;
-        margin-bottom: 20%;
+        position: absolute;
+        top: 100%;
+        height: 100%;
+        background-color: rgb(20,20,20);
+        width: 100%;
   }
 
   .page p {
       text-align: center;
       font-size: 18px;
       color: white;
-      font-family: 'Roboto Flex', sans-serif;
-  }
+      font-family: 'Gantari', sans-serif;
+    }
 
   .page a {
     color: rgb(56,120,145);
   }
 
-  .page h1 {
-    font-family: 'Roboto Flex', sans-serif;    
+  .welcome {
+    font-family: 'Gantari', sans-serif;
     color: rgb(56,120,145);
     font-size: 80px;
-    padding-left: 20%;
-    padding-right: 5%;
+    margin-top: 5%;
   }
 
   .page h4 {
-      font-family: 'Roboto Flex', sans-serif;    
-      color: white;
-      font-size: 40px;
-      padding-left: 20%;
-      padding-right: 5%;
+    font-family: 'Gantari', sans-serif;
+    color: white;
+    font-size: 40px;
+    position: absolute;
+    left: 10%;
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  .page h1 {
+    font-family: 'Gantari', sans-serif;
+    text-align: center;
   }
 
   .float-page {
-    width: 50%;
-    float: left;
-    padding-top: 15%;
-    margin-bottom: 15%;
+    width: 40%;
+    top: 35%;
+    font-family: 'Gantari', sans-serif;
+    position: absolute;
+    left: 10%;
+  }
+
+  .float-page p {
+    font-size: 28px;
+    text-align: left;
   }
 
   .float-page1 {
-    padding-top: 24%;
+    position: absolute;
     width: 20%;
-    float: right;
-    padding-right: 10%;
-    font-family: 'Rubik', sans-serif;
+    left: 65%;
+    top: 35%;
+    font-family: 'Gantari', sans-serif;
     text-align: center;
-    padding-bottom: 0%;
+    height: 65%;
+    border-radius: 20px;
+    position: absolute;
   }
 
   .float-page1 p {
-    font-family: 'Roboto', sans-serif;
-
+    font-family: 'Gantari', sans-serif;
+    margin: 20px;
   }
 
   /* Google Fonts */
@@ -257,69 +274,30 @@ ul {
   margin-top: 10%;
 }
 
-/* Animation */
-.anim-typewriter{
-  animation: typewriter 2s steps(40) 0.5s 1 normal both,
-             blinkTextCursor 750ms steps(30) 4 normal both;
-}
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 7em;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
-
-.anim-typewriter1{
-  animation: typewriter1 2s steps(40) 3.5s 1 normal both,
-             blinkTextCursor1 500ms steps(30) 3.5s infinite normal;
-}
-@keyframes typewriter1{
-  from{width: 0;}
-  to{width: 13.75em;}
-}
-@keyframes blinkTextCursor1{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
-
-.page2 h2 {
-  font-family: 'Roboto Flex', sans-serif;    
+.page2 h2 {  
   color: rgb(56,120,145);
   font-size: 80px;
 }
 
 .page2 {
-  margin-top: 10%;
+  position: absolute;
+  top: 100%;
   text-align: center;
+  height: 100%;
+  background-color: rgb(17, 17, 17);
 }
 
-.page h5 {
-  text-align: left;
-  padding-top: 8px;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
-  padding-left: 20%;
-  font-size: 28px;
-  font-family: 'Roboto', sans-serif;
-  color: white;
-}
-
-.page2 p {
-  color: grey;
-  text-align: left;
-  padding-left: 20%;
-  padding-bottom: 0px;
-  font-family: 'Roboto Flex', sans-serif;  
-  font-size: 16px;
+.footer {
+  position: absolute;
+  top: 300%;
+  width: 100%;
 }
 
 .footerText {
-  color: grey;
-  font-size: 16px;
-  font-family: 'Roboto Flex', sans-serif;    
+  color: rgb(180, 180, 180);
+  font-size: 16px;  
   text-align: center;
+  width: 100%;
 }
 
 .footerRule {
@@ -327,19 +305,10 @@ ul {
   background-color: white;
 }
 
-.float button {
-  opacity: 0;
-}
-
 @keyframes fade{
   from{opacity: 0;}
   to{opacity: 1;}
 }
-
-.fade-in{
-  animation: fade 1s steps(40) 6.4s 1 normal both;
-}
-
 
 .innerfloat {
   float: left;
@@ -365,19 +334,78 @@ ul {
 .page2 h6 {
   color: white;
   font-size: 16px;
-  font-family: 'Roboto Flex', sans-serif;   
   text-align: left;
   padding-left: 20%;
   padding-right: 20%;
   margin-top: 20px;
 }
 
-#linkToBlogs {
+.linkToBlogs {
   color: rgb(56,120,145);
-  float: left;
-  padding-left: 20%;
+  border: 2px solid red;
 }
 
 #white {
   color: white;
+}
+
+@font-face {
+  font-family: Visby-semibold;
+  src: url(Fontspring-DEMO-visbycf-demibold.otf)
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 2%;
+}
+
+.grid-item {
+  min-width: 300px;
+  border-radius: 5px;
+  border: 1px solid rgb(56,120,145);
+  min-height: 120px;
+  text-align: left;
+  margin: 1%;
+}
+
+.grid-item h5 {
+  text-align: left;
+  margin: 15px;
+  font-size: 12px;
+  font-family: Visby-semibold;
+  font-weight: 400;
+
+}
+
+.grid-item h3 {
+  text-align: center;
+  font-size: 24px;
+  background: rgb(56,120,145);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Gantari', sans-serif;
+  font-weight: 500;
+}
+
+.page2 h1 {
+  font-family: 'Gantari', sans-serif;
+  font-weight: 500;
+  font-size: 36px;
+  background: -webkit-linear-gradient(30deg, rgb(168, 31, 150),rgb(15, 93, 211));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.grid-item p {
+  text-align: left;
+  margin: auto;
+  color: white;
+  font-size: 14px;
+  margin-left: 15px;
+  font-family: 'Gantari', sans-serif;
+  font-weight: 500;
 }
