--- a/blog.css
+++ b/blog.css
@@ -34,7 +34,7 @@ a {
     z-index: 10;
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
-    font-family: Visby-semibold;
+    font-family: 'Gantari', sans-serif;
   }
 
 #globalNav > div {
@@ -211,15 +211,19 @@ ul {
   }
 
 .footerText {
-    color: grey;
+    color: white;
     font-size: 16px;
-    font-family: 'Roboto Flex', sans-serif;    
     text-align: center;
+    font-family: 'Gantari', sans-serif;
   }
   
   .footerRule {
     height: 0.1px;
     background-color: white;
+  }
+
+  .footer {
+    border-top: 0.1px solid white;
   }
 
 
